--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "test": "turbo run test",
+    "test:coverage": "turbo run test:coverage",
+    "bench:core-host-world": "node scripts/bench-core-host-world.mjs",
     "clean": "turbo run clean && rm -rf node_modules",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
     "docs:archive": "node scripts/archive-docs.mjs",
+    "docs:mel-grammar": "node scripts/update-mel-grammar.mjs",
     "docs:api": "typedoc --options typedoc.json",
     "docs:api:clean": "rm -rf docs/api"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^4.0.16",
     "turbo": "^2.3.3",
     "typedoc": "^0.25.13",
     "typescript": "^5.7.2",
