--- a/packages/host/package.json
+++ b/packages/host/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "build": "tsc",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "test:watch": "vitest"
   },
   "peerDependencies": {
