--- a/packages/bridge/package.json
+++ b/packages/bridge/package.json
@@ -32,6 +32,7 @@
   "scripts": {
     "build": "tsc",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "test:watch": "vitest"
   },
   "peerDependencies": {
