--- a/packages/effect-utils/package.json
+++ b/packages/effect-utils/package.json
@@ -33,6 +33,7 @@
   "scripts": {
     "build": "tsc",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "test:watch": "vitest"
   },
   "dependencies": {
