--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,7 +6,7 @@
   "include-component-in-tag": true,
   "include-v-in-tag": true,
   "separate-pull-requests": true,
-  "pull-request-title-pattern": "chore${scope}: release ${component} ${version}",
+  "pull-request-title-pattern": "chore: release ${component} ${version}",
   "changelog-sections": [
     { "type": "feat", "section": "Features" },
     { "type": "fix", "section": "Bug Fixes" },
