--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -38,10 +38,10 @@
     "cli": "node ./dist/cli/index.js"
   },
   "peerDependencies": {
-    "@manifesto-ai/core": "^1.0.0",
-    "@manifesto-ai/builder": "^1.0.0",
-    "@manifesto-ai/host": "^1.0.0",
     "@anthropic-ai/sdk": "^0.26.0",
+    "@manifesto-ai/builder": "^1.0.0",
+    "@manifesto-ai/core": "^1.0.0",
+    "@manifesto-ai/host": "^1.0.0",
     "openai": "^4.0.0",
     "zod": "^4.3.5"
   },
@@ -54,23 +54,23 @@
     }
   },
   "dependencies": {
-    "ink": "^5.0.1",
-    "ink-select-input": "^6.0.0",
+    "ink": "^6.6.0",
+    "ink-select-input": "^6.2.0",
     "ink-spinner": "^5.0.0",
-    "react": "^18.3.1",
-    "meow": "^13.2.0"
+    "meow": "^14.0.0",
+    "react": "^19.2.3"
   },
   "devDependencies": {
-    "@manifesto-ai/core": "workspace:*",
+    "@anthropic-ai/sdk": "^0.71.2",
     "@manifesto-ai/builder": "workspace:*",
-    "@anthropic-ai/sdk": "^0.26.0",
-    "@types/node": "^22.0.0",
-    "@types/react": "^18.3.0",
-    "dotenv": "^16.4.0",
-    "openai": "^4.0.0",
-    "tsx": "^4.19.0",
-    "typescript": "^5.7.3",
-    "vitest": "^4.0.16",
+    "@manifesto-ai/core": "workspace:*",
+    "@types/node": "^25.0.8",
+    "@types/react": "^19.2.8",
+    "dotenv": "^17.2.3",
+    "openai": "^6.16.0",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.17",
     "zod": "^4.3.5"
   },
   "files": [
