--- a/apps/taskflow/package.json
+++ b/apps/taskflow/package.json
@@ -12,19 +12,19 @@
     "mcp": "node src/mcp/server.mjs"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.26.0",
+    "@anthropic-ai/sdk": "^0.71.2",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@langchain/core": "^1.1.8",
-    "@langchain/openai": "^1.2.0",
+    "@langchain/core": "^1.1.13",
+    "@langchain/openai": "^1.2.2",
     "@manifesto-ai/bridge": "workspace:*",
     "@manifesto-ai/compiler": "workspace:*",
     "@manifesto-ai/core": "workspace:*",
     "@manifesto-ai/host": "workspace:*",
     "@manifesto-ai/react": "workspace:*",
     "@manifesto-ai/world": "workspace:*",
-    "@modelcontextprotocol/sdk": "^1.25.1",
+    "@modelcontextprotocol/sdk": "^1.25.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -39,47 +39,48 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/typography": "^0.5.19",
-    "@upstash/ratelimit": "^2.0.7",
-    "@upstash/redis": "^1.35.8",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.1",
     "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.23.26",
-    "langchain": "^1.2.3",
-    "lucide-react": "^0.561.0",
+    "framer-motion": "^12.26.2",
+    "hono": "4.11.4",
+    "langchain": "^1.2.8",
+    "lucide-react": "^0.562.0",
     "marked": "^17.0.1",
-    "motion": "^12.23.26",
-    "next": "16.0.10",
+    "motion": "^12.26.2",
+    "next": "16.1.1",
     "next-themes": "^0.4.6",
-    "openai": "^6.10.0",
+    "openai": "^6.16.0",
     "react": "19.2.3",
-    "react-day-picker": "^9.12.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
-    "shiki": "^3.20.0",
+    "shiki": "^3.21.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "use-stick-to-bottom": "^1.1.1",
     "zod-to-json-schema": "^3.25.1",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.1.0",
-    "@types/node": "^25",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.10",
-    "jsdom": "^26.0.0",
-    "tailwindcss": "^4",
-    "tsx": "^4.19.0",
+    "@testing-library/react": "^16.3.1",
+    "@types/node": "^25.0.8",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.1.1",
+    "jsdom": "^27.4.0",
+    "tailwindcss": "^4.1.18",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5",
-    "vitest": "^2.1.9"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.17"
   }
 }
