--- a/packages/bridge/package.json
+++ b/packages/bridge/package.json
@@ -13,7 +13,13 @@
     "url": "https://github.com/manifesto-ai/core/issues"
   },
   "homepage": "https://github.com/manifesto-ai/core/tree/main/packages/bridge#readme",
-  "keywords": ["manifesto", "bridge", "binding", "events", "state-management"],
+  "keywords": [
+    "manifesto",
+    "bridge",
+    "binding",
+    "events",
+    "state-management"
+  ],
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -39,8 +45,8 @@
     "@manifesto-ai/core": "workspace:*",
     "@manifesto-ai/host": "workspace:*",
     "@manifesto-ai/world": "workspace:*",
-    "typescript": "^5.7.3",
-    "vitest": "^4.0.16"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.17"
   },
   "files": [
     "dist"
