--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18, 20, 22]
+        node-version: [22.12.0]
 
     steps:
       - name: Checkout
@@ -39,15 +39,12 @@ jobs:
         run: pnpm build
 
       - name: Test
-        if: matrix.node-version != 20
         run: pnpm test
 
       - name: Test (Coverage)
-        if: matrix.node-version == 20
         run: pnpm test:coverage
 
       - name: Upload coverage to Codecov
-        if: matrix.node-version == 20
         uses: codecov/codecov-action@v4
         with:
           directory: ./packages
@@ -67,7 +64,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22.12.0
           cache: 'pnpm'
 
       - name: Install dependencies
