--- a/apps/taskflow/package.json
+++ b/apps/taskflow/package.json
@@ -18,11 +18,10 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@langchain/core": "^1.1.13",
     "@langchain/openai": "^1.2.2",
-    "@manifesto-ai/bridge": "workspace:*",
+    "@manifesto-ai/app": "workspace:*",
     "@manifesto-ai/compiler": "workspace:*",
     "@manifesto-ai/core": "workspace:*",
     "@manifesto-ai/host": "workspace:*",
-    "@manifesto-ai/react": "workspace:*",
     "@manifesto-ai/world": "workspace:*",
     "@modelcontextprotocol/sdk": "^1.25.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -77,6 +76,7 @@
     "eslint": "^9.39.2",
     "eslint-config-next": "16.1.1",
     "jsdom": "^27.4.0",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
