--- a/packages/translator/adapters/translator-adapter-openai/package.json
+++ b/packages/translator/adapters/translator-adapter-openai/package.json
@@ -44,6 +44,7 @@
     "openai": "^4.0.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.8",
     "typescript": "^5.9.3",
     "vitest": "^3.2.3"
   }
