--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -28,6 +28,17 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
+    },
+    "./vite": {
+      "types": "./dist/vite.d.ts",
+      "import": "./dist/vite.js",
+      "default": "./dist/vite.js"
+    },
+    "./loader": {
+      "types": "./dist/loader.d.ts",
+      "import": "./dist/loader.js",
+      "require": "./loader.cjs",
+      "default": "./dist/loader.js"
     }
   },
   "scripts": {
@@ -42,6 +53,8 @@
     "@manifesto-ai/core": "^2.0.0",
     "@manifesto-ai/host": "^2.0.0",
     "openai": "^4.0.0",
+    "vite": "^5.0.0 || ^6.0.0 || ^7.0.0",
+    "webpack": "^5.0.0",
     "zod": "^4.3.6"
   },
   "peerDependenciesMeta": {
@@ -49,6 +62,12 @@
       "optional": true
     },
     "openai": {
+      "optional": true
+    },
+    "vite": {
+      "optional": true
+    },
+    "webpack": {
       "optional": true
     }
   },
@@ -68,10 +87,13 @@
     "openai": "^6.17.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
+    "vite": "^7.3.1",
     "vitest": "^4.0.18",
+    "webpack": "^5.102.0",
     "zod": "^4.3.6"
   },
   "files": [
-    "dist"
+    "dist",
+    "loader.cjs"
   ]
 }
