feat(r2): retire app package and enforce sdk-only guard

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,6 +71,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Guard: no app imports
+        run: pnpm check:no-app-imports
+
       - name: Build
         run: pnpm build
 
