--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Guard: no app imports
+        run: pnpm check:no-app-imports
+
       - name: Build
         run: pnpm build
 
@@ -69,6 +72,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+
+      - name: Guard: no app imports
+        run: pnpm check:no-app-imports
 
       - name: Type check
         run: pnpm build
